# dictionary-bot

./: .env.ren  .gitignore  Dockerfile  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt  server.py
ai/: services.py  types.py
api/: api.py  views.py
api/depends/: __init__.py  current_user.py
api/models/: init.py  languages.py  words.py
api/routes/: __init__.py  auth.py  cards.py  dictionaries.py  init.py  words.py
api/schemas/: __init__.py  auth.py  base.py  dictionary.py  word.py
api/services/: __init__.py  auth.py  sessions.py
api/static/: cards.css  cards.js
api/static/scripts/: api.js  scripts.js  theme.js
api/static/styles/: styles.css
api/templates/: cards.html  core.html  dictionary.html  words.html
app/: settings.py  urls.py
app/commands/: default.py
app/handlers/admins/: __init__.py  notify.py  restart.py
app/handlers/users/: __init__.py  dictionaries.py  lang.py  languages.py  start.py  translate.py  (+1 more)
app/keyboards/: __init__.py  apply.py  base.py  card.py  dictionaries.py  dictionary.py  lang.py  menu.py
app/middlewares/: __init__.py
app/states/: __init__.py  dictionaries.py  word.py
bot/: loader.py  start.py  text.py
bot/commands/: default.py
bot/handlers/: __init__.py
bot/keyboards/: __init__.py  apply.py  dictionaries.py  dictionary.py  lang.py  menu.py  save.py
bot/middlewares/: __init__.py
data/: config.py
database/: __init__.py  base.py
database/models/: __init__.py  dictionary.py  language.py  user.py  word.py
dictionary/: admin.py  models.py  serializers.py  views.py
dictionary/migrations/: 0001_initial.py  0002_remove_word_examples_remove_word_synonyms.py
migrations/: env.py
migrations/versions/: 0f3ccc140a8e_added_tables.py  395172acd799_added_tables.py  d78bbd153838_added_tables.py  da0b8e6d301c_added_tables.py  e0282fcde427_added_tables.py  ef3ce54c13dc_added_tables.py  fca50e3b45b9_added_tables.py
translations/: services.py  views.py
translator/: __init__.py  google.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py
utils/: __init__.py  logger.py  logging.py  translate.py
(+25 files in other folders)
