[project]
name = "dictionary-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "accelerate>=1.5.2",
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "edge-tts>=7.0.0",
    "environs>=14.1.1",
    "fastapi[standard]>=0.115.11",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "pytz>=2025.1",
    "redis>=5.2.1",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.39",
    "transformers>=4.50.0",
]
