[project]
name = "django-aiogram-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "babel>=2.17.0",
    "black>=25.1.0",
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-jazzmin>=3.0.1",
    "django-ninja>=1.4.3",
    "djangorestframework>=3.16.1",
    "environs>=14.2.0",
    "google-cloud-translate>=3.21.1",
    "google-genai>=1.23.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "neo4j>=5.28.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
    "whitenoise>=6.9.0",
]

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''
